@@ -43,6 +43,8 @@ void ssd1306_send_data_stop(void);
 
 // ----------------------------------------------------------------------------
 
+#define ssd1306_clear() ssd1306_fill(0);
+
 #define ssd1306_char(c) ssd1306_char_font6x8(c)
 #define ssd1306_string(s) ssd1306_string_font6x8(s)
 #define ssd1306_numdec(n) ssd1306_numdec_font6x8(n)
@@ -52,7 +54,8 @@ void ssd1306_send_data_stop(void);
 
 void ssd1306_init(void);
 void ssd1306_setpos(uint8_t x, uint8_t y);
-void ssd1306_fillp(uint8_t p1, uint8_t p2);
+void ssd1306_fill4(uint8_t, uint8_t, uint8_t, uint8_t);
+void ssd1306_fill2(uint8_t p1, uint8_t p2);
 void ssd1306_fill(uint8_t p);
 void ssd1306_fillscreen(uint8_t fill);
 void ssd1306_char_font6x8(char ch);
