@@ -19,7 +19,7 @@
 
 // ============================================================================
 
-void ssd1306_char_f8x16(uint8_t x, uint8_t y, const char ch[]);
+void ssd1306_string_font8x16xy(uint8_t x, uint8_t y, const char ch[]);
 
 // ============================================================================
 
